cluster/manifests/cert-manager/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
    pod-security.kubernetes.io/enforce: restricted
