cluster/manifests/cert-manager/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: cert-manager-cainjector
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: cert-manager
      app.kubernetes.io/component: cainjector
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: cert-manager
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: cert-manager
      app.kubernetes.io/component: controller
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: cert-manager-webhook
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: cert-manager
      app.kubernetes.io/component: webhook
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
